--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -22,7 +22,7 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
       Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
       <Tabs>
             <Tab label="Logs">
-            ⭐ Any Loki compatible Agent <br/>
+            ⭐ Any Loki compatible Agent <br/> ⚙️ 
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Vector](https://vector.dev/), 
@@ -34,7 +34,7 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
             
             </Tab>
             <Tab label="Metrics">
-            ⭐ Any Prometheus compatible Agent <br/>
+            ⭐ Any Prometheus compatible Agent <br/> ⚙️ 
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Vector](https://vector.dev/), 
@@ -42,7 +42,7 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
             
             </Tab>
             <Tab label="Traces">
-            ⭐ Any Tempo/Zipkin compatible Agent <br/>
+            ⭐ Any Tempo/Zipkin compatible Agent <br/> ⚙️ 
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Zipkin](https://zipkin.io/), 
@@ -50,7 +50,7 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
             
             </Tab>
             <Tab label="Profiles">
-            ⭐ Any Pyroscope compatible Agent <br/>
+            ⭐ Any Pyroscope compatible Agent <br/> ⚙️ 
             [Grafana Pyroscope SDK](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/), 
             [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) 
             
