--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -6,7 +6,8 @@ footer: false
 nextPage: false
 ---
 
-import SmoothIframe from 'SmoothIframe/SmoothIframer'
+import SmoothIframe from '../src/components/SmoothIframe'
+
 
 ### Logs Explorer
 
