--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -12,3 +12,11 @@ import SmoothIframe from '../../src/components/SmoothIframe'
 ### Logs Explorer
 
 <SmoothIframe src="https://demo.arcade.software/GKaq4SJRBPYyCZgoWBoM?embed" height="550px" />
+
+### Metrics Explorer
+
+<SmoothIframe src="https://demo.arcade.software/r2A4ia93hPs96pyiaFQx?embed" height="550px" />
+
+### Traces Explorer
+
+<SmoothIframe src="https://demo.arcade.software/G43G6ja4CHJYpF9rc3V2?embed" height="550px" />
