--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -1,3 +1,10 @@
+---
+sidebar: true
+outline: false
+navbar: true
+nextPage: false
+---
+
 import { PackageManagerTabs } from '@theme';
 import { Steps } from '@theme';
 import { Tab, Tabs } from 'rspress/theme';
