--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -71,6 +71,18 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 
       <img src="https://i.imgur.com/3ENjPX8.png" />
 
+      <Tabs>
+            <Tab label="Explore Logs">
+            <SmoothIframe src="https://demo.arcade.software/GKaq4SJRBPYyCZgoWBoM?embed" height="550px" />
+            </Tab>
+            <Tab label="Explore Metrics">
+            <SmoothIframe src="https://demo.arcade.software/r2A4ia93hPs96pyiaFQx?embed" height="550px" />
+            </Tab>
+            <Tab label="Explore Traces">
+            <SmoothIframe src="https://demo.arcade.software/G43G6ja4CHJYpF9rc3V2?embed" height="550px" />
+            </Tab>
+      </Tabs>
+
       ### Step 4
 
       Sky is the limit! Any example from Grafana Cloud should work as-is in Gigapipe.
@@ -80,7 +92,7 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 <br/>
 
 
-
+<!--
 
 ### Custom
 
@@ -95,4 +107,4 @@ const source = new RawSource('console.log("Hello, world!");');
 
 For detailed usage, please refer to the [webpack-sources](https://github.com/webpack/webpack-sources) documentation.
 
-
+-->
