--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -8,6 +8,7 @@ nextPage: false
 import { PackageManagerTabs } from '@theme';
 import { Steps } from '@theme';
 import { Tab, Tabs } from 'rspress/theme';
+import SmoothIframe from '../../src/components/SmoothIframe'
 
 
 # Get Started
