--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -73,13 +73,16 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
       <img src="https://i.imgur.com/3ENjPX8.png" />
 
       <Tabs>
-            <Tab label="Explore Logs">
+            <Tab label="Logs">
+            ⭐ Explore Logs using the native Loki Datasource<br/>
             <SmoothIframe src="https://demo.arcade.software/GKaq4SJRBPYyCZgoWBoM?embed" height="550px" />
             </Tab>
-            <Tab label="Explore Metrics">
+            <Tab label="Metrics">
+            ⭐ Explore Logs using the native Prometheus/Mimir Datasource<br/>
             <SmoothIframe src="https://demo.arcade.software/r2A4ia93hPs96pyiaFQx?embed" height="550px" />
             </Tab>
-            <Tab label="Explore Traces">
+            <Tab label="Traces">
+            ⭐ Explore Logs using the native Tempo Datasource<br/>
             <SmoothIframe src="https://demo.arcade.software/G43G6ja4CHJYpF9rc3V2?embed" height="550px" />
             </Tab>
       </Tabs>
@@ -91,21 +94,3 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
 </Steps>
 
 <br/>
-
-
-<!--
-
-### Custom
-
-`@rspack/core` exports the [webpack-sources](https://github.com/webpack/webpack-sources) module through `sources`. It provides a set of classes for creating and manipulating source code fragments and source maps. When developing Rspack plugins, you can use these classes to handle and manipulate source code.
-
-```js
-import { sources } from '@rspack/core';
-
-const { RawSource } = sources;
-const source = new RawSource('console.log("Hello, world!");');
-```
-
-For detailed usage, please refer to the [webpack-sources](https://github.com/webpack/webpack-sources) documentation.
-
--->
