--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -64,7 +64,7 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
             
             </Tab>
       </Tabs>
-
+      <br/>
 
       ### Step 3
 
@@ -85,11 +85,18 @@ Gigapipe provides you with a managed Observability stack - _just bring your own 
             ⭐ Explore Logs using the native Tempo Datasource<br/>
             <SmoothIframe src="https://demo.arcade.software/G43G6ja4CHJYpF9rc3V2?embed" height="550px" />
             </Tab>
+            <Tab label="View">
+            ⭐ Explore Logs, Metrics and Traces using View<br/>
+            <SmoothIframe src="https://user-images.githubusercontent.com/1423657/200136242-f4133229-ee7c-45e0-8228-8734cf56140a.gif" height="550px" />
+            </Tab>
       </Tabs>
+      <br/>
 
       ### Step 4
 
-      Sky is the limit! Any example from Grafana Cloud should work as-is in Gigapipe.
+      Sky is the limit! Any tutorial or example from Grafana Cloud should work as-is in Gigapipe.
+
+      <img src="https://user-images.githubusercontent.com/1423657/184538094-13c11500-24ef-4468-9f33-dc9d564238e3.gif" width="90%" />
 
 </Steps>
 
