--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -11,12 +11,13 @@ import { Tab, Tabs } from 'rspress/theme';
 import SmoothIframe from '../../src/components/SmoothIframe'
 
 
-# Get Started
+# Get Started with <span style="-webkit-text-fill-color: var(--rp-home-hero-name-color);">Gigapipe</span>
 
-:::warning Activate your Gigapipe Account before proceeding
+> Gigapipe provides you with a ready to use managed Observability stack - _just add data_.
+
+:::warning Activate your Gigapipe Account before proceeding!
 :::
 
-Gigapipe provides you with a managed Observability stack - _just bring your own data_.
 
 <Steps>
       ### Step 1
