--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -11,9 +11,9 @@ import { Tab, Tabs } from 'rspress/theme';
 import SmoothIframe from '../../src/components/SmoothIframe'
 
 
-# Get Started with <span style="-webkit-text-fill-color: var(--rp-home-hero-name-color);">Gigapipe</span>
+# Get Started with Gigapipe
 
-> Gigapipe provides you with a ready to use managed Observability stack - _just add data_.
+> We provides You with a _ready-to-use_ managed Observability stack - _just add your data_.
 
 :::warning Activate your Gigapipe Account before proceeding!
 :::
