--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -99,6 +99,12 @@ import SmoothIframe from '../../src/components/SmoothIframe'
 
       <img src="https://user-images.githubusercontent.com/1423657/184538094-13c11500-24ef-4468-9f33-dc9d564238e3.gif" width="100%" />
 
+      <br/>
+
+      ### Step 5
+      There's no step 5! Youre' already done! 🎉 <br/>
+      If you've used Grafana or Grafana Cloud before, You'll feel right at home. Everything works, nothing new to learn.
+
 </Steps>
 
 <br/>
