--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -102,8 +102,10 @@ import SmoothIframe from '../../src/components/SmoothIframe'
       <br/>
 
       ### Step 5
-      There's no step 5! Youre' already done! 🎉 <br/>
+      **There's no step 5!** You're already done! 🎉 <br/>
       If you've used Grafana or Grafana Cloud before, You'll feel right at home. Everything works, nothing new to learn.
+
+      🎱 You can get inspired with our use-case examples or try any tutorial for Grafana LGTM - _it should just work_ ™️
 
 </Steps>
 
