--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -16,10 +16,11 @@ _That's us_. Gigapipe is a Polyglot platform designed around the Observability s
 Our product values and design principles are simple:
 
 ✔️ We don't like metered solutions. Our plans are unlimited.<br/>
-✔️ We don't like dynamic pricing. Our service cost is fixed.<br/>
-✔️ We don't like vendor lock-ins. Our platform speaks freely.
+✔️ We don't like dynamic pricing. Our service costs are fixed.<br/>
+✔️ We don't like vendor lock-ins. Our platform speaks freely.<br/>
+✔️ We don't like monopolies. Our products don't depend on AWS.
 
-> _We wanted a powerful all-in-one Observability solution for ourselves, so we made one for everybody._
+> _We needed a powerful all-in-one Observability stack for ourselves, so we made one for everybody!_
 
 ### 💎 Independence
 
