--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -18,7 +18,7 @@ Our product values and design principles are simple:
 ✔️ We don't like metered solutions. Our plans are unlimited.<br/>
 ✔️ We don't like dynamic pricing. Our service costs are fixed.<br/>
 ✔️ We don't like vendor lock-ins. Our platform speaks freely.<br/>
-✔️ We don't like monopolies. Our products don't depend on AWS.
+✔️ We don't like monopolies. Our products are not on AWS.
 
 > _We needed a powerful all-in-one Observability stack for ourselves, so we made one for everybody!_
 
