--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -11,32 +11,33 @@ _That's us_. Gigapipe is a Polyglot platform designed around the Observability s
 
 <br/>
 
-### ☝️ Why did we launch Gigapipe? 
+#### ☝️ Why did we create Gigapipe? 
 
-Our product values and design principles are simple:
+> _We needed a powerful all-in-one Observability stack for our stack, so we made one for everybody!_
+
+Let's go back to the pre-cloud era. Our product goals and principles are simple:
 
 ✔️ We don't like metered solutions. Our plans are unlimited.<br/>
 ✔️ We don't like dynamic pricing. Our service costs are fixed.<br/>
 ✔️ We don't like vendor lock-ins. Our platform speaks freely.<br/>
 ✔️ We don't like monopolies. Our products are not on AWS.
 
-> _We needed a powerful all-in-one Observability stack for ourselves, so we made one for everybody!_
 
-### 💎 Independence
+##### 💎 Independence
 
 Our stack is _protocol compatible_ with many projects and products - _without depending on any_. <br/>
 Our core engine and APIs are all developed from scratch _("clear room")_ and _completely opensource_.
 
-### ⚡ Solid Performance
+##### ⚡ Performance
 
-Our stack leverages the **ClickHouse** and **DuckDB** OLAP engines for storage, fast analytics and scalable performance. <br/>
+Our stack uses **ClickHouse** + **DuckDB** OLAP engines w/ NVMe storage for fast analytics & scalable performance. <br/>
 We develop our data engines and database extensions standing on the shoulders of giants.
 
-### 🍖 Underdog-ness
+##### 🍖 Underdog-ness
 
 Our pricing model is different because we are different - and so are our amazing dedicated hosting and VPS partners. <br/>
 We don't run on AWS. We are not VC controlled. We are born and made in EU - by humans for humans.
 
-### ⚖️ Compliance 
+##### ⚖️ [Compliance](/legal)
 
 ![](./public/compliance.png)
