--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -102,11 +102,13 @@ import SmoothIframe from '../../src/components/SmoothIframe'
       <br/>
 
       ### Step 5
+      <br />
       **There's no step 5!** You're already done! 🎉 <br/>
 
-      🎱 If you've used Grafana or Grafana Cloud before, You'll feel right at home. Everything works, nothing new to learn.
+      If you've used Grafana or Grafana Cloud before, You will feel right at home. 
 
-      🎱 Get inspired with our use-case examples or try any tutorial for Grafana LGTM - _it should just work_ ™️
+      And since there's nothing new to learn, the Team can focus on _their data._ **Whoo-hoo!** 🎉 
+
 
 </Steps>
 
