--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -102,13 +102,13 @@ import SmoothIframe from '../../src/components/SmoothIframe'
       <br/>
 
       ### Step 5
-      <br />
       **There's no step 5!** You're already done! 🎉 <br/>
 
-      If you've used Grafana or Grafana Cloud before, You will feel right at home. 
+      If you've used **Grafana** or **Grafana Cloud** before, _You will feel right at home._ 
 
-      And since there's nothing new to learn, the Team can focus on _their data._ **Whoo-hoo!** 🎉 
+      ... and since there's nothing new to learn, the Team can just focus on _data._ **Whoo-hoo!** 🎉 
 
+      <img src="/giga_quotes.png" />
 
 </Steps>
 
