--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -108,7 +108,7 @@ import SmoothIframe from '../../src/components/SmoothIframe'
 
       ... and since there's nothing new to learn, the Team can just focus on _data._ **Whoo-hoo!** 🎉 
 
-      <img src="/giga_quotes.png" />
+      <img src="giga_quotes.png" width="150px" />
 
 </Steps>
 
