--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -41,3 +41,5 @@ We don't run on AWS. We are not VC controlled. We are born and made in EU - by h
 ##### ⚖️ [Compliance](/legal)
 
 ![](./public/compliance.png)
+
+<img src="giga_quotes.png" width="150px" />
