--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -15,12 +15,17 @@ _That's us_. Gigapipe is a Polyglot platform designed around the Observability s
 
 > _We needed a powerful all-in-one Observability stack for our stack, so we made one for everybody!_
 
-Let's go back to the pre-cloud era. Our product goals and principles are simple:
+Let's take it back to the _pre-cloud era_. Our product goals and principles are simple:
 
 ✔️ We don't like metered solutions. Our plans are unlimited.<br/>
 ✔️ We don't like dynamic pricing. Our service costs are fixed.<br/>
 ✔️ We don't like vendor lock-ins. Our platform speaks freely.<br/>
 ✔️ We don't like monopolies. Our products are not on AWS.
+
+
+###### 🍇 Founders
+
+<img src="giga_founders.png" />
 
 
 ##### 💎 Independence
