--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -25,7 +25,7 @@ Let's take it back to the _pre-cloud era_. Our product goals and principles are 
 
 ###### 🍇 Founders
 
-<img src="giga_founders.png" />
+<img src="./public/giga_founders.png" />
 
 
 ##### 💎 Independence
