--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -9,6 +9,8 @@ outline: false
 
 _That's us_. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
+<img src="./public/giga_founders.png" width="250px" style="-webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));"/>
+
 <br/>
 
 #### ☝️ Why did we create Gigapipe? 
@@ -21,11 +23,6 @@ Let's take it back to the _pre-cloud era_. Our product goals and principles are 
 ✔️ We don't like dynamic pricing. Our service costs are fixed.<br/>
 ✔️ We don't like vendor lock-ins. Our platform speaks freely.<br/>
 ✔️ We don't like monopolies. Our products are not on AWS.
-
-
-###### 🍇 Founders
-
-<img src="./public/giga_founders.png" />
 
 
 ##### 💎 Independence
