--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -9,7 +9,7 @@ outline: false
 
 _That's us_. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
-<img src="./public/giga_founders.png" width="250px" style="-webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));"/>
+<img src="./public/giga_founders.png" width="250px" alt="Founders" />
 
 <br/>
 
