--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -40,7 +40,8 @@ We develop our data engines and database extensions standing on the shoulders of
 Our pricing model is different because we are different - and so are our amazing dedicated hosting and VPS partners. <br/>
 We don't run on AWS. We are not VC controlled. We are born and made in EU - by humans for humans.
 
-##### ⚖️ [Compliance](/legal)
+##### ⚖️ Compliance
+Our procedures and infrastructure are compliant with regulations in each supported territory.
 
-![](./public/compliance.png)
+<img src="./public/compliance.png" width="90%" />
 
