--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -31,7 +31,7 @@ import SmoothIframe from '../../src/components/SmoothIframe'
       Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
       <Tabs>
             <Tab label="Logs">
-            ⭐ Any Loki compatible Agent <br/> ⚙️ 
+            ⭐ Use any Loki compatible Agent <br/> 📦 
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Vector](https://vector.dev/), 
@@ -43,7 +43,7 @@ import SmoothIframe from '../../src/components/SmoothIframe'
             
             </Tab>
             <Tab label="Metrics">
-            ⭐ Any Prometheus compatible Agent <br/> ⚙️ 
+            ⭐ Use any Prometheus compatible Agent <br/> 📦 
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Vector](https://vector.dev/), 
@@ -51,7 +51,7 @@ import SmoothIframe from '../../src/components/SmoothIframe'
             
             </Tab>
             <Tab label="Traces">
-            ⭐ Any Tempo/Zipkin compatible Agent <br/> ⚙️ 
+            ⭐ Use any Tempo/Zipkin compatible Agent <br/> 📦 
             [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
             [Grafana Agent](https://grafana.com/docs/agent/latest/), 
             [Zipkin](https://zipkin.io/), 
@@ -59,7 +59,7 @@ import SmoothIframe from '../../src/components/SmoothIframe'
             
             </Tab>
             <Tab label="Profiles">
-            ⭐ Any Pyroscope compatible Agent <br/> ⚙️ 
+            ⭐ Use any Pyroscope SDK compatible Agent <br/> 📦 
             [Grafana Pyroscope SDK](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/), 
             [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) 
             
