--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -32,35 +32,34 @@ import SmoothIframe from '../../src/components/SmoothIframe'
       <Tabs>
             <Tab label="Logs">
             ⭐ Use any Loki compatible Agent <br/>  
-            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
-            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/), 
-            📦 [Vector](https://vector.dev/), 
-            📦 [Opentelemetry](https://github.com/metrico/otel-collector), 
-            📦 [Logtail](https://docs.digitalocean.com/products/marketplace/catalog/logtail/), 
-            📦 [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/), 
-            📦 [Fluentd](https://www.fluentd.org/), 
+            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) 
+            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) 
+            📦 [Vector](https://vector.dev/) 
+            📦 [Opentelemetry](https://github.com/metrico/otel-collector) 
+            📦 [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/) 
+            📦 [Fluentd](https://www.fluentd.org/) 
             📦 [Logstash](https://opensearch.org/docs/latest/tools/logstash/index/)
             
             </Tab>
             <Tab label="Metrics">
             ⭐ Use any Prometheus compatible Agent <br/>
-            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
-            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/), 
-            📦 [Vector](https://vector.dev/), 
+            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) 
+            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) 
+            📦 [Vector](https://vector.dev/) 
             📦 [Opentelemetry](https://github.com/metrico/otel-collector)
             
             </Tab>
             <Tab label="Traces">
             ⭐ Use any Tempo/Zipkin compatible Agent <br/> 
-            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/), 
-            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/), 
-            📦 [Zipkin](https://zipkin.io/), 
+            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) 
+            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) 
+            📦 [Zipkin](https://zipkin.io/) 
             📦 [Opentelemetry](https://github.com/metrico/otel-collector)
             
             </Tab>
             <Tab label="Profiles">
             ⭐ Use any Pyroscope SDK compatible Agent <br/> 
-            📦 [Grafana Pyroscope SDK](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/), 
+            📦 [Grafana Pyroscope SDK](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/) 
             📦 [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) 
             
             </Tab>
