--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -11,13 +11,9 @@ import { Tab, Tabs } from 'rspress/theme';
 import SmoothIframe from '../../src/components/SmoothIframe'
 
 
-# Get Started with Gigapipe
+# 🏁 Get Started with Gigapipe
 
-> We provides You with a _ready-to-use_ managed Observability stack - _just add your data_.
-
-:::warning Activate your Gigapipe Account before proceeding!
-:::
-
+> Welcome to your _ready-to-use_ managed Observability stack - _just add data_
 
 <Steps>
       ### Step 1
@@ -112,3 +108,7 @@ import SmoothIframe from '../../src/components/SmoothIframe'
 </Steps>
 
 <br/>
+
+:::warning Activate your Gigapipe Account before proceeding!
+Need Assistance? Contact our Support Team
+:::
