--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -1,7 +1,11 @@
 ---
 sidebar: false
-outline: false
+outline: true
+navbar: true
+nextPage: false
 ---
+
+import { PackageManagerTabs } from '@theme';
 
 # 💜 Polyglot Observability
 
