--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -19,7 +19,7 @@ _That's us_. Gigapipe is a Polyglot platform designed around the Observability s
 
 #### ☝️ Why did we create Gigapipe? 
 
-> _We needed a powerful all-in-one Observability stack for our stack, so we made one for everybody!_
+> _We needed a powerful all-in-one Observability stack and wanted to learn, so we made one for everyone!_
 
 Let's take it back to the _pre-cloud era_. Our product goals and principles are simple:
 
