--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -13,4 +13,6 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 <PricingCalculator />
 
+> ⚖️ Services are provided under the [Gigapipe Service Terms](/legal)
+
 > 🗨️ Need a Custom Configuration or High-Availability? [Contact our Team](https://docs.google.com/forms/d/e/1FAIpQLSeb_eMwgtpbOk0ejAVW7ihKAzkt0WKnLwCQFyHkIzl5DAU2ig/viewform)
