--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -7,7 +7,7 @@ nextPage: false
 
 import { PackageManagerTabs } from '@theme';
 
-# 💜 Polyglot Observability
+# We 💜 Polyglot Observability
 
 > Polyglot comes from Greek _polyglōttos_, a combination of **poly** - _"many" or "multi"_ - and **glōtta** for _"language_.
 
