--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -29,23 +29,23 @@ Let's take it back to the _pre-cloud era_. Our product goals and principles are 
 ✔️ We don't like monopolies. Our products are not on AWS.
 
 
-##### 💎 Independence
+#### 💎 Independence
 
 Our stack is _protocol compatible_ with many projects and products - _without depending on any_. <br/>
 Our core engine and APIs are all developed from scratch _("clear room")_ and _completely opensource_.
 
-##### ⚡ Performance
+#### ⚡ Performance
 
 Our stack uses **ClickHouse** + **DuckDB** OLAP engines w/ NVMe storage for fast analytics & scalable performance. <br/>
 We develop our data engines and database extensions standing on the shoulders of giants.
 
-##### 🍖 Underdog-ness
+#### 🍖 Underdog-ness
 
 Our pricing model is different because we are different - and so are our amazing dedicated hosting and VPS partners. <br/>
 We don't run on AWS. We are not VC controlled. We are born and made in EU - by humans for humans.
 
-##### ⚖️ Compliance
-Our procedures and infrastructure are compliant with regulations in each supported territory.
+#### ⚖️ Compliance
+Our procedures and partner infrastructure are compliant with regulations in each supported territory.
 
 <img src="./public/compliance.png" width="90%" />
 
