--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -13,7 +13,7 @@ import SmoothIframe from '../../src/components/SmoothIframe'
 
 # 🏁 Get Started with Gigapipe
 
-> Welcome to your _ready-to-use_ managed Observability stack - _just add data_
+Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘️
 
 <Steps>
       ### Step 1
