--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -42,7 +42,7 @@ We develop our data engines and database extensions standing on the shoulders of
 #### 🍖 Underdog-ness
 
 Our pricing model is different because we are different - and so are our amazing dedicated hosting and VPS partners. <br/>
-We don't run on AWS. We are not VC controlled. We are born and made in EU - by humans for humans.
+We don't run on AWS. We are not VC controlled. Our products are made in EU - by humans for humans.
 
 #### ⚖️ Compliance
 Our procedures and partner infrastructure are compliant with regulations in each supported territory.
