--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -29,7 +29,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
       Configure your Observability Agent to send Logs, Metrics and Traces to Gigapipe
       <Tabs>
             <Tab label="Logs">
-            ⭐ Use any Loki compatible Agent<br/>
+            ⭐ Use any Loki compatible Agent or Client<br/><br/>
             📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) 
             📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) 
             📦 [Vector](https://vector.dev/) 
@@ -40,7 +40,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             
             </Tab>
             <Tab label="Metrics">
-            ⭐ Use any Prometheus compatible Agent<br/>
+            ⭐ Use any Prometheus compatible Agent or Client<br/><br/>
             📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) 
             📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) 
             📦 [Vector](https://vector.dev/) 
@@ -48,7 +48,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             
             </Tab>
             <Tab label="Traces">
-            ⭐ Use any Tempo/Zipkin compatible Agent<br/>
+            ⭐ Use any Tempo/Zipkin compatible Agent or Client<br/><br/>
             📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) 
             📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) 
             📦 [Zipkin](https://zipkin.io/) 
@@ -56,7 +56,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             
             </Tab>
             <Tab label="Profiles">
-            ⭐ Use any Pyroscope SDK compatible Agent<br/>
+            ⭐ Use any Pyroscope SDK compatible Agent or Client<br/><br/>
             📦 [Grafana Pyroscope SDK](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/) 
             📦 [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) 
             
