--- a/docs/product.mdx
+++ b/docs/product.mdx
@@ -11,4 +11,18 @@ import { PackageManagerTabs } from '@theme';
 
 > Polyglot comes from Greek _polyglōttos_, a combination of **poly** - _"many" or "multi"_ - and **glōtta** for _"language_.
 
-## Hello World
+# About Gigapipe
+
+## Observability
+
+Gigapipe is a comprehensive observability platform designed to unify logs, metrics, and traces in a single, seamless database. Unlike traditional tools that silo data, Gigapipe's all-in-one approach ensures automatic correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
+
+## Performance
+
+Powered by qryn and built leveraging advanced OLAP engines like ClickHouse and DuckDB, Gigapipe offers high performance, endless integrations, and flexibility without vendor lock-in. With transparent, scalable, and **unmetered pricing**, along with customizable, user-friendly dashboards, it’s the ideal choice for teams looking to streamline operations and reduce costs.
+
+## Polyglot
+
+Gigapipe is also **polyglot**, supporting multiple query languages and protocols, allowing engineering teams to work with the tools they know best. Whether using PromQL, LogQL, or other common languages, Gigapipe provides full flexibility in querying and managing logs, metrics, and traces. This open approach simplifies system integration, giving teams the freedom to interact with observability data in ways that best suit their workflows.
+
+Gigapipe works as a standalone drop in replacement for Grafana (if you're already using it) or you can start completely fresh!
