--- a/docs/product.mdx
+++ b/docs/product.mdx
@@ -19,7 +19,7 @@ Gigapipe is a comprehensive observability platform designed to unify logs, metri
 
 ## Performance
 
-Powered by qryn and built leveraging advanced OLAP engines like ClickHouse and DuckDB, Gigapipe offers high performance, endless integrations, and flexibility without vendor lock-in. With transparent, scalable, and **unmetered pricing**, along with customizable, user-friendly dashboards, it’s the ideal choice for teams looking to streamline operations and reduce costs.
+Powered by [qryn](https://qryn.metrico.in/#/) and built leveraging advanced OLAP engines like ClickHouse and DuckDB, Gigapipe offers high performance, endless integrations, and flexibility without vendor lock-in. With transparent, scalable, and **unmetered pricing**, along with customizable, user-friendly dashboards, it’s the ideal choice for teams looking to streamline operations and reduce costs.
 
 ## Polyglot
 
