--- a/docs/product.mdx
+++ b/docs/product.mdx
@@ -26,3 +26,7 @@ Powered by [qryn](https://qryn.metrico.in/#/) and built leveraging advanced OLAP
 Gigapipe is also **polyglot**, supporting multiple query languages and protocols, allowing engineering teams to work with the tools they know best. Whether using PromQL, LogQL, or other common languages, Gigapipe provides full flexibility in querying and managing logs, metrics, and traces. This open approach simplifies system integration, giving teams the freedom to interact with observability data in ways that best suit their workflows.
 
 Gigapipe works as a standalone drop in replacement for Grafana (if you're already using it) or you can start completely fresh!
+
+## Flexibility
+
+We offer a fully managed cloud offering, or if you want to be more hands on we also have hybrid and totally on-prem packages. Gigapipe can be used and deployed around how YOU want to work.
