--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -13,7 +13,7 @@ import { PackageManagerTabs } from '@theme';
 
 _That's us_. Gigapipe is a Polyglot platform designed around the Observability standards the world already loves 💜
 
-<img src="./public/giga_founders.png" width="200px" alt="Founders" />
+<img src="./public/giga_team.png" width="250px" alt="Founders" />
 
 <br/> <br/>
 
