fix: docs sidebar

--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -5,7 +5,7 @@ navbar: true
 nextPage: false
 ---
 
-import { PackageManagerTabs } from '@theme';
+import { PackageManagerTabs } from 'rspress/theme';
 
 # We 💜 Polyglot Observability
 
