--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -9,7 +9,9 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 # Gigapipe Plans and Options
 
-> ⚡ All plans include unmetered Logs, Metrics, Traces and Profiles. The only limit are resources/storage.
+#### 🐣 Early Bird _"All You Can Eat"_ Plans
+
+⚡ All plans feature **unmetered** Logs, Metrics, Traces and Profiles. _The only limit are resources/storage_.
 
 <PricingCalculator />
 
