--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -17,4 +17,6 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 > ⚖️ Services are provided under the [Gigapipe Service Terms](/legal)
 
+> 🥡 Multiple services across regions can be combined for HA/Failover
+
 > 🗨️ Need a Custom Configuration or High-Availability? [Contact our Team](https://docs.google.com/forms/d/e/1FAIpQLSeb_eMwgtpbOk0ejAVW7ihKAzkt0WKnLwCQFyHkIzl5DAU2ig/viewform)
