--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -1,15 +1,31 @@
 
 import SmoothIframe from '../../src/components/SmoothIframe'
+import { Tab, Tabs } from 'rspress/theme';
 
+# Explore your Data
 
-### Logs Explorer
+## Grafana
 
-<SmoothIframe src="https://demo.arcade.software/GKaq4SJRBPYyCZgoWBoM?embed" height="550px" />
+You Gigapipe account comes with a _built-in_ **Grafana** instance preconfigured with available datasources.
 
-### Metrics Explorer
+### 👁️‍🗨️ Explore
+Let's start with the basics: Exploring our Logs, Metrics and Traces in our stack
 
-<SmoothIframe src="https://demo.arcade.software/r2A4ia93hPs96pyiaFQx?embed" height="550px" />
-
-### Traces Explorer
-
-<SmoothIframe src="https://demo.arcade.software/G43G6ja4CHJYpF9rc3V2?embed" height="550px" />
+<Tabs>
+            <Tab label="Logs">
+            ⭐ Explore Logs using the native Loki Datasource<br/>
+            <SmoothIframe src="https://demo.arcade.software/GKaq4SJRBPYyCZgoWBoM?embed" height="550px" />
+            </Tab>
+            <Tab label="Metrics">
+            ⭐ Explore Logs using the native Prometheus/Mimir Datasource<br/>
+            <SmoothIframe src="https://demo.arcade.software/r2A4ia93hPs96pyiaFQx?embed" height="550px" />
+            </Tab>
+            <Tab label="Traces">
+            ⭐ Explore Logs using the native Tempo Datasource<br/>
+            <SmoothIframe src="https://demo.arcade.software/G43G6ja4CHJYpF9rc3V2?embed" height="550px" />
+            </Tab>
+            <Tab label="View">
+            ⭐ Explore Logs, Metrics and Traces using View<br/>
+            <img src="https://user-images.githubusercontent.com/1423657/200136242-f4133229-ee7c-45e0-8228-8734cf56140a.gif" width="100%" />
+            </Tab>
+</Tabs>
