--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -4,11 +4,10 @@ import { Tab, Tabs } from 'rspress/theme';
 
 # Explore your Data
 
-## Grafana
+### 👁️‍🗨️ Grafana Explore
 
 You Gigapipe account comes with a _built-in_ **Grafana** instance preconfigured with available datasources.
 
-### 👁️‍🗨️ Explore
 Let's start with the basics: Exploring our Logs, Metrics and Traces in our stack
 
 <Tabs>
@@ -26,6 +25,16 @@ Let's start with the basics: Exploring our Logs, Metrics and Traces in our stack
             </Tab>
             <Tab label="View">
             ⭐ Explore Logs, Metrics and Traces using View<br/>
+            <img src="https://user-images.githubusercontent.com/1423657/200136242-f4133229-ee7c-45e0-8228-8734cf56140a.gif" width="100%" />
+            </Tab>
+</Tabs>
+
+### 👁️‍🗨️ Gigapipe View
+Not a fan of Grafana? Prefer something ligther and faster to troubleshoot? Enter Gigapipe View, our native UI.
+
+<Tabs>
+            <Tab label="Gigapipe View">
+            ⭐ Explore Logs, Metrics and Traces using Gigapipe View<br/>
             <img src="https://user-images.githubusercontent.com/1423657/200136242-f4133229-ee7c-45e0-8228-8734cf56140a.gif" width="100%" />
             </Tab>
 </Tabs>
