--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -2,7 +2,7 @@
 import SmoothIframe from '../../src/components/SmoothIframe'
 import { Tab, Tabs } from 'rspress/theme';
 
-# Explore your Data
+# 🔎 Explore your Data
 
 ### 👁️‍🗨️ Grafana Explore
 
